--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
             <a href="index.html" title="Ir par a página inicial">
                 <img src="assets/img/logo.png" alt="Logo Verum" class="logo-topo">
             </a>
+            <span id="toggle-menu"></span>
             <nav class="nav-busca-login">
                 <ul>
                     <li><a href="#" title="Buscar no site"><i class="fa fa-search"></i></a></li>
                     <li><a href="#" title="Logar no site"><i class="fa fa-user"></i></a></li>
                 </ul>
             </nav>
-            <nav class="nav-menu-principal">
+            <nav class="nav-menu-principal" id="menu-principal">
                 <ul>
                     <li class="active"><a href="#" title="Home">Home</a></li>
                     <li><a href="#" title="Educação">Educação</a></li>
@@ -76,7 +77,7 @@
                     <div class="grid a">
                         <article>
                             <header>
-                                <img src="assets/img/fuvest.jpg" alt="Fuvest" style="height: 356px;">
+                                    <a href="#"title="Fuvest tem primeira fase neste domingo com novo sistema de nota de corte"><img src="assets/img/fuvest.jpg" alt="Fuvest" style="height: 356px;"></a>
                                 <span>Educação</span>
                                 <h2><a href="#"title="Fuvest tem primeira fase neste domingo com novo sistema de nota de corte">Fuvest tem primeira fase neste domingo com novo sistema de nota de corte</a></h2>
                                 <p><a href="#">Júlio Praxedes</a> | há 3 horas</p>
@@ -86,7 +87,7 @@
                     <div class="grid b">
                         <article>
                             <header>
-                                <img src="assets/img/tesla.jpg" alt="Tesla" style="height: 220px;">
+                                <a href="#"><img src="assets/img/tesla.jpg" alt="Tesla" style="height: 220px;"></a>
                                 <span>Negócios</span>
                                 <h2><a href="#">Soros assume participação em bônus da Tesla</a></h2>
                                 <p><a href="#">Pedro Cavalera</a> | há 4 horas</p>
@@ -111,7 +112,7 @@
                     <div class="grid a">
                         <article>
                             <header>
-                                <img src="assets/img/celular.jpg" alt="Celular" style="height: 220px;">
+                                <a href="#"><img src="assets/img/celular.jpg" alt="Celular" style="height: 220px;"></a>
                                 <span>Tecnologia</span>
                                 <h2>Celular se torna principal forma de acesso à internet no Brasil
                                 </h2>
@@ -122,7 +123,7 @@
                     <div class="grid b">
                         <article>
                             <header>
-                                <img src="assets/img/apple.jpg" alt="Ações Apple" style="height: 220px;">
+                                <a href="#"><img src="assets/img/apple.jpg" alt="Ações Apple" style="height: 220px;"></a>
                                 <span>Economia</span>
                                 <h2>Quatro motivos para a queda no preço das ações da Apple
                                 </h2>
@@ -133,7 +134,7 @@
                     <div class="grid c">
                         <article>
                             <header>
-                                <img src="assets/img/black-friday.jpg" alt="Black Friday" style="height: 220px;">
+                                <a href="#"><img src="assets/img/black-friday.jpg" alt="Black Friday" style="height: 220px;"></a>
                                 <span>Negócios</span>
                                 <h2>Black Friday cresce 42% e fatura R$ 608,7 milhões
                                 </h2>
@@ -153,10 +154,10 @@
                     <div class="grid a">
                         <article>
                             <header>
-                                <img src="assets/img/inep.jpg" alt="INEP" style="height: 350px;">
+                                <a href="#"><img src="assets/img/inep.jpg" alt="INEP" style="height: 350px;"></a>
                                 <span>Educação</span>
-                                <h2>Instituto Nacional de Estudos e Pesquisas Educacionais Anísio Teixeira divulga
-                                    dados detalhados do Enem 2017
+                                <h2><a href="#">Instituto Nacional de Estudos e Pesquisas Educacionais Anísio Teixeira divulga
+                                    dados detalhados do Enem 2017</a>
                                 </h2>
                                 <p><a href="#">Júlio Praxedes</a> | há 2 dias</p>
                             </header>
@@ -165,9 +166,9 @@
                     <div class="grid b">
                         <article>
                             <header>
-                                <img src="assets/img/celular.jpg" alt="Celular" style="height: 350px;">
+                                <a href="#"><img src="assets/img/celular.jpg" alt="Celular" style="height: 350px;"></a>
                                 <span>Negócios</span>
-                                <h2>Soros assume participação em bônus da Tesla
+                                <h2><a href="#">Soros assume participação em bônus da Tesla</a>
                                 </h2>
                                 <p><a href="#">Pedro Cavalera</a> | há 4 horas</p>
                             </header>
@@ -198,7 +199,7 @@
                     <div class="grid a">
                         <article>
                             <header>
-                                <img src="assets/img/black-friday.jpg" alt="" style="height: 170px">
+                                <a href="#"><img src="assets/img/black-friday.jpg" alt="" style="height: 170px"></a>
                                 </h2>
                             </header>
                         </article>
@@ -206,7 +207,7 @@
                     <div class="grid b">
                         <article>
                             <header>
-                                <img src="assets/img/fuvest.jpg" alt="" style="height: 170px">
+                                <a href="#"><img src="assets/img/fuvest.jpg" alt="" style="height: 170px"></a> 
                                 </h2>
                             </header>
                         </article>
@@ -214,7 +215,7 @@
                     <div class="grid c">
                         <article>
                             <header>
-                                <img src="assets/img/bitcoin.jpg" alt="" style="height: 170px">
+                                <a href="#"><img src="assets/img/bitcoin.jpg" alt="" style="height: 170px"></a>
                                 </h2>
                             </header>
                         </article>
@@ -222,7 +223,7 @@
                     <div class="grid d">
                         <article>
                             <header>
-                                <img src="assets/img/celular.jpg" alt="" style="height: 170px">
+                                <a href="#"><img src="assets/img/celular.jpg" alt="" style="height: 170px"></a>
                                 </h2>
                             </header>
                         </article>
