--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li class="active"><a href="#" title="Home">Home</a></li>
                     <li><a href="#" title="Educação">Educação</a></li>
                     <li><a href="#" title="Negócios">Negócios</a></li>
-                    <li><a href="#" title="Economia">Economia</a></li>
+                    <li><a href="interna.html" title="Economia">Economia</a></li>
                     <li><a href="#" title="Tecnologia">Tecnologia</a></li>
                 </ul>
             </nav>
@@ -54,7 +54,7 @@
                     </div>
                     <div class="dados-autor">
                         <span>Economia</span>
-                        <h2><a href="#" title="Exemplo de Dubai mostra que a falta de moradia tem solução">Exemplo de Dubai mostra que a falta de moradia tem solução</h2>
+                        <h2><a href="interna.html" title="Exemplo de Dubai mostra que a falta de moradia tem solução">Exemplo de Dubai mostra que a falta de moradia tem solução</h2>
                         <p><a href="#">Micheli Correia</a> | há 27 minutos</p>
                     </div>
                 </div>
