--- a/interna.html
+++ b/interna.html
@@ -36,7 +36,7 @@
             </nav>
             <nav class="nav-menu-principal" id="menu-principal">
                 <ul>
-                    <li><a href="#" title="Home">Home</a></li>
+                    <li><a href="index.html" title="Home">Home</a></li>
                     <li><a href="#" title="Educação">Educação</a></li>
                     <li><a href="#" title="Negócios">Negócios</a></li>
                     <li class="active"><a href="#" title="Economia">Economia</a></li>
